// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0

// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// Copyright © 2021 Solid Value Software, LLC

// Below was originally code from MEw 7
syntax = "proto3";

// From MEw 7 option csharp_namespace = "Service.ServiceA";
option csharp_namespace = "ServiceA";

package serviceA;

// The ServiceADemo rpc API definition.

service SvcADemo {
  // Sends a Basic Functional Test (BFT) request msg
  rpc DoBasicFunctionalTest (SvcABftRequest) returns (SvcABftReply);

  // Publish an event via any means appropriate to ServiceA.
  rpc PublishEvent(SvcAPublishEventRequest) returns (SvcAStringReply); 

  }

// The request message containing test data string(s).
message SvcABftRequest {
  string testData1 = 1;
  string testData2 = 2;
}

// The response message containing the concatenated testData1 and testData2 strings.
message SvcABftReply {
  string message = 1;
}

message SvcAStringReply {
	string message = 1;
}

// TODO Make PublishKind an enum.

message SvcAPublishEventRequest {
	string PubSubKind = 1;// In other words netcodeconnstr, netcodeclicred, netcodeclicert, daprpubsub
   	string PubSubName = 2; // In other words dapr pubsub names, i.e. pubsub, and other dapr pubsub names
	string TopicName = 3;
	string EventPayload = 4;
	
	//object EventPayload = 3;
}

